test/must_fail/two_same_names3.ref
error: Device diode L1 - name should start with D... or LED... but starts with L. You can suppress this error with: (some device).name("L1", true);
  [two_same_names3.ngjs:0:0] in <anonymous>()
    diode('L1', 1, 0, '1N4148');
    ^
hint: To allow non-typical names use: diode().name("L1", true)...
hint: To allow non-typical names use: diode("D1", ...).name("L1", true)...
hint: The purpose of this error is to prevent stupid errors like: resistor('C1', 1, 2, '100n');

Stack trace (6 frames):
  [Exception.js:0:0, core.js:0:0] in Exception()
    Internal.buffered_stack_trace(aMessage || "Error");
             ^
  [assert/assert_expected_prefix.js:0:0, core.js:0:0] in assert_expected_prefix()
    throw new Exception('Device ' + aDevice.type + ' ' + aName + ' - name should start with ' + aDevice.expected_prefix.sort().join('... or ') + '... but starts with ' + pr + '. You can suppress this error with: (some device).name("' + aName + '", true);');
          ^
  [device/diode.js:0:0, core.js:0:0] in Diode.name()
    assert_expected_prefix(aName, this);
    ^
  [device/diode.js:0:0, core.js:0:0] in Diode()
    this.name(aName);
         ^
  [device/diode.js:0:0, core.js:0:0] in diode()
    return new Diode(aName, aAnode, aCathode, aModel);
           ^
  [two_same_names3.ngjs:0:0] in <anonymous>()
    diode('L1', 1, 0, '1N4148');
    ^

exit(12)
